z-index issue

--- a/src/app/components/organisms/panel4/panel4.component.scss
+++ b/src/app/components/organisms/panel4/panel4.component.scss
@@ -12,7 +12,6 @@
             max-width: 44rem;
             box-sizing: border-box;
             padding: 0.5rem;
-            transform: scale(0);
             opacity: 0;
         }
 
